--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+    <load crs="partials/header.html" />
 
     <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <load crs="hero.html" />
+    <load crs="advertisement.html" />
+    <load crs="about-us.html" />
+    <load crs="our-courses.html" />
+    <load crs="our-mentors.html" />
+    <load crs="sign-up.html" />
+    <load crs="reviews.html" />
+    <load crs="footer.html" />
 
     <script type="module" src="/main.js"></script>
   </body>
