--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,16 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load crs="partials/header.html" />
+    <load src="partials/header.html" />
 
     <!-- Loads the specified .html file -->
-    <load crs="hero.html" />
-    <load crs="advertisement.html" />
-    <load crs="about-us.html" />
-    <load crs="our-courses.html" />
-    <load crs="our-mentors.html" />
-    <load crs="sign-up.html" />
-    <load crs="reviews.html" />
-    <load crs="footer.html" />
+    <load src="hero.html" />
+    <load src="advertisement.html" />
+    <load src="about-us.html" />
+    <load src="our-courses.html" />
+    <load src="sign-up.html" />
+    <load src="reviews.html" />
+    <load src="footer.html" />
 
     <script type="module" src="/main.js"></script>
   </body>
