--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,22 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="partials/header.html" />
-
-    <!-- Loads the specified .html file -->
-    <load src="hero.html" />
-    <load src="advertisement.html" />
-    <load src="about-us.html" />
-    <load src="our-courses.html" />
-    <load src="sign-up.html" />
-    <load src="reviews.html" />
+    <header>
+      <!-- <load src="partials/header.html" /> -->
+      <h1>Helo, friend!</h1>
+    </header>
+    <main>
+      <!-- Loads the specified .html file -->
+      <load src="hero.html" />
+      <load src="advertisement.html" />
+      <load src="about-us.html" />
+      <load src="our-courses.html" />
+      <load src="sign-up.html" />
+      <load src="reviews.html" />
+    </main>
     <load src="footer.html" />
 
-    <script type="module" src="/main.js"></script>
+    <!-- <script type="module" src="/main.js"></script> -->
+    <script type="module" src="./proof.js"></script>
   </body>
 </html>
